Added home page -- basic layout (mobile)

--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -6,10 +6,12 @@
 
   @mixin btn-anim() {
     transition: all .15s ease;
+    &:hover {
+      @apply opacity-70;
+    }
   }
   .btn-anim {
     @include btn-anim;
   }
-
 }
 
