--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -4,5 +4,7 @@ $gradient-top: #35A48300;
 $gradient-bottom: #077854FF;
 $orange: #FFB800;
 $black: #424242;
+$blue: #0014C7;
+$red: #CA0000;
 $gray: #B7B7B7;
 $bg: #F0F0F0;
