[UI/UX] added focus effect for all elements

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -10,5 +10,12 @@
     scroll-behavior: smooth;
     @apply font-sans;
   }
+  * {
+    &:focus:not([disabled]) {
+      @apply outline-none;
+      @apply ring;
+      @apply ring-primary/30;
+    }
+  }
 }
 
